fixe upate style data src css used in components
SQUASHED: AUTO-COMMIT-src-client-morphic-component-loader.js,fixe-upate-style-data-src-css-used-in-components,

--- a/src/components/widgets/css-reloading-test-widget.css
+++ b/src/components/widgets/css-reloading-test-widget.css
@@ -3,6 +3,7 @@
 }
 #bar {
   border: 19px solid yellow;
-  color: blue;
+  color: red;
   font-size: bold;
 }
+
